added JWT auth